--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
+  "homepage": "http://isseifukata.github.io/react-tic-tac-toe-2",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && gh-pages -d build -r https://github.com/isseifukata/react-tic-tac-toe-2.git"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +40,8 @@
   },
   "resolutions": {
     "styled-components": "^5"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
